--- a/app/home/welcome.component.html
+++ b/app/home/welcome.component.html
@@ -1,14 +1,4 @@
-﻿<div class="panel panel-primary">
-    <div class="panel-heading">
-        {{pageTitle}}
-    </div>
-    <div class="panel-body"  >
-        <div class="row" >
-            <img src="./app/assets/images/logo.jpg" 
-                 class="img-responsive center-block"
-                 style="max-height:300px;padding-bottom:50px"/>
-            <input type="text" />
-        </div>
-        
-    </div>
+﻿<div class="container">
+    <input type="text" [(ngModel)]='searchText' />
+    <button class="btn btn-default" (click)='search()'>Search</button>    
 </div>
