--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,9 +1,73 @@
-<nav class="navbar navbar-default">
-    <h3 class="navbar-brand">{{pageTitle}}</h3>
-        
-    <ul class="nav navbar-nav">
-        <li><a>Home</a></li>
-        <li><a>{{user1}}</a></li>
-    </ul>
-    
-</nav>
+<div class="navbar navbar-inverse navbar-fixed-top">    
+        <div class="navbar-inner">
+            <div class="container-fluid">
+                <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a>
+                <a href="/index.html" class="brand" title="MEA2N Starter Kit">
+                    MEA2N
+                </a>
+                <div class="nav-collapse collapse">
+                    <ul class="nav nav-pills">                    
+                        <li><a id="btnRun" title="" href="/Welcome">Welcome</a></li>
+                        <li><a id="btnRun" title="" href="/Welcome">New release</a></li>
+                    </ul>
+                    
+                    <ul class="nav nav-pills pull-right">
+                        <li><form class="input-append" method="GET" action="/search" style="margin-top:4px;margin-bottom:5px;">
+                            <input type="text" title="Enter keyword(s) to find" id="kw" name="kw" class="span2" maxlength="40">
+                            <button type="submit" class="btn"><i class="icon-search" title="Search"></i></button></form>&nbsp;&nbsp;
+                        </li>
+                        
+                        <li class="dropdown" id="menuLogin">
+                            <a class="dropdown-toggle" href="#" data-toggle="dropdown" id="navLogin">Login</a>
+                            <div class="dropdown-menu" style="padding:17px;">
+                                <form id="formLogin" class="form"> 
+                                    <label>Login</label> 
+                                    <input name="_csrf" id="token" type="hidden" value="4mUqko6l-1VDLKoFLqLZZ0o-A9x0IfRRMlkg">
+    							    <input name="username" id="username" type="text" placeholder="Username" pattern="^[a-z,A-Z,0-9,_]{6,15}$" data-valid-min="6" title="Enter your username" required="">
+    							    <input name="password" id="password" type="password" placeholder="Password" title="Enter your password" required=""><br>
+    							    <button type="button" id="btnLogin" class="btn">Login</button>
+    							</form>
+                                <form><a href="#" title="Fast and free sign up!" id="btnNewUser" data-toggle="collapse" data-target="#formRegister">New User? Sign-up..</a></form>
+                                <form id="formRegister" class="form collapse">
+                                    <input name="_csrf" id="token" type="hidden" value="4mUqko6l-1VDLKoFLqLZZ0o-A9x0IfRRMlkg">
+                                    <input name="email" id="inputEmail" type="email" placeholder="Email" required="">
+        						    <input name="username" id="inputUsername" type="text" placeholder="Username" pattern="^[a-z,A-Z,0-9,_]{6,15}$" data-valid-min="6" title="Choose a username" required=""><br>
+    							    <input name="password" id="inputpassword" type="password" placeholder="Password" required=""> 
+                                    <input name="verify" id="inputVerify" type="password" placeholder="Password (again)" required=""><br>                                  
+    							    <button type="button" id="btnRegister" class="btn">Sign Up</button>
+    							</form>
+                                <a data-toggle="modal" role="button" href="#forgotPasswordModal">Forgot username or password?</a>
+                                <a data-toggle="modal" role="button" href="#contactModal"><small>Need help? Contact us</small></a>
+                            </div>
+                        </li>
+                        
+                        <li class="dropdown hide" id="menuUser">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="See your Bootply collection and profile">
+                                <i class="icon-user icon-xxlarge"> </i> <span id="lblUsername"></span>
+                                <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/user">Dashboard</a></li>
+                                <li><a href="/new">Create New Bootply</a></li>
+                                
+                                <li><a href="/logout">Logout</a></li>
+                                <li class="divider"> </li>
+                                <li><a href="/bootstrap-community">Community</a></li>
+                                <li><a href="/about">About</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+</div>
+
+
+
+<div class='container'>
+    <router-outlet></router-outlet>
+</div>
