--- a/app/home/welcome.component.html
+++ b/app/home/welcome.component.html
@@ -1,4 +1,5 @@
-﻿<div class="container">
+﻿
+<div class="container">
     <input type="text" [(ngModel)]='searchText' />
     <button class="btn btn-default" (click)='search()'>Search</button>    
 </div>
