--- a/app/auth/register.component.html
+++ b/app/auth/register.component.html
@@ -12,10 +12,10 @@
                     </div>-->
                     <fieldset>                        
                         <div class="form-group has-error">
-                            <input class="form-control input-lg" placeholder="E-mail Address" name="email" type="text">
+                            <input class="form-control input-lg" placeholder="E-mail Address" name="email" type="text" [(ngModel)]="userEmail">
                         </div>
                         <div class="form-group has-success">
-                            <input class="form-control input-lg" placeholder="Password" name="password" value="" type="password">
+                            <input class="form-control input-lg" placeholder="Password" name="password" value="" type="password" [(ngModel)]="password">
                         </div>
                         <div class="form-group has-success">
                             <input class="form-control input-lg" placeholder="Confirm Password" name="password" value="" type="password">
