--- a/app/auth/login.component.html
+++ b/app/auth/login.component.html
@@ -1,9 +1,26 @@
-<form id="formLogin" class="form dropdown-login">
-    <label>Login</label>
-    <input name="_csrf" id="token" type="hidden" value="4mUqko6l-1VDLKoFLqLZZ0o-A9x0IfRRMlkg">
-    <input name="username" id="username" type="text" placeholder="Username" pattern="^[a-z,A-Z,0-9,_]{6,15}$" data-valid-min="6"
-        title="Enter your email" required="" [(ngModel)]="userEmail">
-    <input name="password" id="password" type="password" placeholder="Password" 
-        title="Enter your password" required="" [(ngModel)]="password"><br>
-    <button type="button" id="btnLogin" class="btn" (click)="login();">Login</button>
-</form>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+            <div class="">
+                <div class="">
+                    <h3 class="text-center">Login</h3>
+
+                </div>
+                <div class="panel-body">
+                    <!--<div class="alert alert-danger">
+                        <a class="close" data-dismiss="alert" href="#">×</a>Incorrect No!
+                    </div>-->
+                    <fieldset>                        
+                        <div class="form-group has-error">
+                            <input class="form-control input-lg" placeholder="E-mail Address" name="email" type="text" [(ngModel)]="userEmail">
+                        </div>
+                        <div class="form-group has-success">
+                            <input class="form-control input-lg" placeholder="Password" name="password" value="" type="password" [(ngModel)]="password">
+                        </div>
+                        <input class="btn btn-lg btn-primary btn-block" (click)="login()" type="submit" value="Login">
+                    </fieldset>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
