add orderby pipe

--- a/app/home/newRelease.component.html
+++ b/app/home/newRelease.component.html
@@ -12,15 +12,15 @@
     </div>
     <div class="col-sm-6 col-md-6">
 
-        <a class="dropdown-toggle pull-right" data-toggle="dropdown" id="viewList">
+        <a class="dropdown-toggle pull-right" data-toggle="dropdown" id="viewList" title="order by">
             <i class="glyphicon glyphicon-th"></i>
         </a>
 
 
         <ul class="dropdown-menu pull-right" style="padding:17px;" aria-labelledby="viewList">
-            <li><a>thumbnail view</a></li>
-            <li><a>list view</a></li>
-            <li><a>available only</a></li>
+            <li><a (click)="orderby('gameTitle')">By title</a></li>
+            <li><a (click)="orderby('releaseDate')">By release date</a></li>
+            <li><a (click)="orderby('quantity')">By availablity</a></li>
         </ul>
 
     </div>
@@ -28,7 +28,7 @@
 
 <div class="row bottom10">
 
-    <div class="col-sm-6 col-md-4" *ngFor='#g of games | gamePlatformFilter : platformFilter'>
+    <div class="col-sm-6 col-md-4" *ngFor='#g of games | gamePlatformFilter : platformFilter | gameOrderFilter: orderbyFilter'>
 
         <div class="thumbnail">
             <img src="{{g.smallImageUrl}}" alt="{{g.gameTitle}" />
@@ -36,7 +36,7 @@
 
         <div class="caption">
             <h3>{{g.gameTitle}}</h3>
-            <p>{{g.platform}} - {{g.releaseDate}}</p>
+            <p>{{g.platform}} - {{g.releaseDate}} - {{g.quantity}}</p>
 
             <p>
                 <a href="#" class="btn btn-primary" role="button">
