--- a/app/app.component.html
+++ b/app/app.component.html
@@ -21,9 +21,15 @@
                     <a [routerLink]="['NewRelease']">New Release</a>                    
                 </li>
             </ul>
-
+                    
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown" id="menuLogin">
+                <li *ngIf="user != null ">
+                    <a>Welcome, {{user}}</a>
+                </li>
+                <li *ngIf= "user!=null">
+                    <a (click)="signout()"><i class="glyphicon glyphicon-log-out"></i></a>
+                </li>
+                <li class="dropdown" id="menuLogin" *ngIf="user==null">
                     <a class="dropdown-toggle" href="#" data-toggle="dropdown" id="navLogin">
                         <span class="glyphicon glyphicon-log-in"></span> Login
                     </a>
