--- a/app/auth/login.component.html
+++ b/app/auth/login.component.html
@@ -4,6 +4,9 @@
     <input name="username" id="username" type="text" placeholder="Username" pattern="^[a-z,A-Z,0-9,_]{6,15}$" data-valid-min="6"
         title="Enter your email" required="" [(ngModel)]="userEmail">
     <input name="password" id="password" type="password" placeholder="Password" 
-        title="Enter your password" required="" [(ngModel)]="password"><br>
+        title="Enter your password" required="" [(ngModel)]="password"><br>    
     <button type="button" id="btnLogin" class="btn" (click)="login();">Login</button>
+    
+    {{errorMessage}}
+    
 </form>
