--- a/app/app.component.html
+++ b/app/app.component.html
@@ -23,13 +23,13 @@
             </ul>
                     
             <ul class="nav navbar-nav navbar-right">
-                <li *ngIf="user != null ">
-                    <a>Welcome, {{user}}</a>
+                <li *ngIf="authService.AuthorisedUser != null ">
+                    <a>Welcome, {{authService.AuthorisedUser}}</a>                    
                 </li>
-                <li *ngIf= "user!=null">
+                <li *ngIf= "authService.AuthorisedUser!=null">
                     <a (click)="signout()"><i class="glyphicon glyphicon-log-out"></i></a>
                 </li>
-                <li class="dropdown" id="menuLogin" *ngIf="user==null">
+                <li class="dropdown" id="menuLogin" *ngIf="authService.AuthorisedUser==null">
                     <a class="dropdown-toggle" href="#" data-toggle="dropdown" id="navLogin">
                         <span class="glyphicon glyphicon-log-in"></span> Login
                     </a>
