--- a/app/auth/register.component.html
+++ b/app/auth/register.component.html
@@ -3,20 +3,28 @@
         <div class="col-md-4 col-md-offset-4">
             <h3 class="text-center">Become a new user</h3>
             <div class="panel-body">
-                <form #regForm="ngForm">
+                <form [ngFormModel]="regForm">
                     <fieldset>
                         <div class="form-group has-error">
-                            <input class="form-control input-lg" placeholder="E-mail Address" name="email" type="text" [(ngModel)]="userEmail" required
-                                ngControl="name" #name="ngForm">
-                            <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-                                Email is required
+                            <input class="form-control input-lg" placeholder="E-mail Address" name="email" type="email" [(ngModel)]="userEmail" required
+                                ngControl="username" #username="ngForm">                            
+                            <p *ngIf="username.pending">Fetching data from the server...</p>
+                            <div *ngIf="username.dirty && !username.valid && !username.pending" class="alert alert-danger">
+                                <p *ngIf="username.errors.required">Username is required.</p>
+                                <p *ngIf="username.errors.email">Username is not valid email address.</p>
+                                <p *ngIf="username.errors.startsWithNumber">Your username can't start with a number</p>
+                                <p *ngIf="username.errors.usernameTaken">This username is taken</p>
                             </div>
                         </div>
                         <div class="form-group has-success">
                             <input class="form-control input-lg" placeholder="Password" name="password" value="" type="password" [(ngModel)]="password"
-                                required ngControl="pw" #pw="ngForm" >
-                            <div [hidden]="pw.valid || pw.pristine" class="alert alert-danger">
+                                [ngFormControl]="regForm.controls['pw']">
+                            <!--<div [hidden]="pw.valid || pw.pristine" class="alert alert-danger">
                                 Password is required
+                            </div>-->
+                            <div *ngIf="pw.dirty && !pw.valid && !username.pw" class="alert alert-danger">
+                                <p *ngIf="pw.errors.required">password is required.</p>
+                                <p *ngIf="pw.errors.minlength">password minium length is 4.</p>
                             </div>
                         </div>
                         <div class="form-group has-success">
@@ -36,9 +44,7 @@
                                     <input name="terms" type="checkbox">I have read and agree to the <a href="#">terms of service</a>
                                 </label>
                         </div>
-                        <input class="btn btn-lg btn-primary btn-block"
-                            [disabled]="!regForm.form.valid"  
-                            (click)="register()" type="submit" value="Register" >
+                        <input class="btn btn-lg btn-primary btn-block" [disabled]="!regForm.valid" (click)="register()" type="submit" value="Register">
                     </fieldset>
                 </form>
             </div>
