--- a/app/auth/register.component.html
+++ b/app/auth/register.component.html
@@ -7,7 +7,7 @@
                     <fieldset>
                         <div class="form-group has-error">
                             <input class="form-control input-lg" placeholder="E-mail Address" name="email" type="email" [(ngModel)]="userEmail" required
-                                ngControl="username" #username="ngForm">                            
+                                [ngFormControl]="username">                            
                             <p *ngIf="username.pending">Fetching data from the server...</p>
                             <div *ngIf="username.dirty && !username.valid && !username.pending" class="alert alert-danger">
                                 <p *ngIf="username.errors.required">Username is required.</p>
@@ -18,7 +18,7 @@
                         </div>
                         <div class="form-group has-success">
                             <input class="form-control input-lg" placeholder="Password" name="password" value="" type="password" [(ngModel)]="password"
-                                [ngFormControl]="regForm.controls['pw']">
+                                [ngFormControl]="pw">
                             <!--<div [hidden]="pw.valid || pw.pristine" class="alert alert-danger">
                                 Password is required
                             </div>-->
