--- a/app/auth/register.component.html
+++ b/app/auth/register.component.html
@@ -44,7 +44,7 @@
                                     <input name="terms" type="checkbox">I have read and agree to the <a href="#">terms of service</a>
                                 </label>
                         </div>
-                        <input class="btn btn-lg btn-primary btn-block" [disabled]="!regForm.valid" (click)="register()" type="submit" value="Register">
+                        <input class="btn btn-lg btn-primary btn-block" [disabled]="!regForm.valid" (click)="register()" value="Register">
                     </fieldset>
                 </form>
             </div>
