add an attribute directive example

--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -9,12 +9,12 @@
 
             <div class="navbar-header">
                 <a href="/index.html" class="brand navbar-brand" title="MEA2N Starter Kit test">
-                        MEA2N
+                        <span [myHighlight]="" [defaultColor]="'white'">MEA2N</span>
                     </a>
             </div>
 
             <ul class="nav navbar-nav">
-                <li class="active">
+                <li>
                     <a [routerLink]="['Welcome']">Welcome</a> 
                 </li>
                 <li>                    
