--- a/client/app/auth/register.component.html
+++ b/client/app/auth/register.component.html
@@ -17,7 +17,7 @@
                             </div>
                         </div>
                         <div class="form-group has-error">
-                            <input class="form-control input-lg" placeholder="Password" name="password" value="" type="password" [(ngModel)]="password"
+                            <input class="form-control input-lg" placeholder="Password" name="password" value="" type="password" [(ngModel)]="password" required
                                 [ngFormControl]="pw">
                             <!--<div [hidden]="pw.valid || pw.pristine" class="alert alert-danger">
                                 Password is required
@@ -28,8 +28,7 @@
                             </div>
                         </div>
                         <div class="form-group has-error">
-                            <input class="form-control input-lg" placeholder="Confirm Password" name="password" value="" type="password" [(ngModel)]="confirmPassword"
-                                required>
+                            <input class="form-control input-lg" placeholder="Confirm Password" name="password" value="" type="password" [(ngModel)]="confirmPassword" required>
                         </div>
                         <!--<div class="form-group">
                                 <select class="form-control input-lg">
