--- a/client/app/assets/styles/main.css
+++ b/client/app/assets/styles/main.css
@@ -32,3 +32,7 @@ form.dropdown-login{margin:0 0 20px;}
 .navbar select,textarea,input[type="text"],input[type="password"] {
     margin-bottom:10px;
 }
+
+.row .bottom10 {
+    margin-bottom: 10px;
+}
