--- a/client/app/home/myGames.component.html
+++ b/client/app/home/myGames.component.html
@@ -3,6 +3,21 @@
 <div class="row bottom10">
     <div class="col-sm-6 col-md-6">
         <ul class="list-inline">
+            
+            <li>
+                <a [class.active]="platformFilter == ''" (click)="updatePlatformFilter('')">My collection</a>
+            </li>
+            <li>
+                | <a [class.active]="platformFilter == p" (click)="updatePlatformFilter(p)">Wish list</a>
+            </li>
+        </ul>
+    </div>
+    
+</div>
+
+<div class="row bottom10">
+    <div class="col-sm-6 col-md-6">
+        <ul class="list-inline">
             <li><strong>Platform</strong></li>
             <li><a [class.active]="platformFilter == ''" (click)="updatePlatformFilter('')">All</a></li>
             <li *ngFor="#p of platformList">
@@ -15,7 +30,6 @@
         <a class="dropdown-toggle pull-right" data-toggle="dropdown" id="viewList" title="order by">
             <i class="glyphicon glyphicon-th"></i>
         </a>
-
 
         <ul class="dropdown-menu pull-right" style="padding:17px;" aria-labelledby="viewList">
             <li><a (click)="orderby('gameTitle')">By title</a></li>
@@ -37,24 +51,10 @@
         <div class="caption">
             <h3>{{g.gameTitle}}</h3>
             
-            <p>{{g.platform}} - {{g.releaseDate}} - {{g.quantity}} / {{g.wishcount}}</p>
 
             <p *ngIf= "_authService.AuthorisedUser!=null">
-                <a *ngIf="!isInMy('collection', g.gameId) && !isInMy('wishlist', g.gameId)" (click)="addToCollection(g)" class="btn btn-primary" role="button">
-                    <i class="glyphicon glyphicon-plus"></i>My collection                    
-                </a>
                 
-                <a *ngIf="!isInMy('collection', g.gameId) && !isInMy('wishlist', g.gameId)" (click)="addToWish(g)" class="btn btn-default" role="button">
-                    <i class="glyphicon glyphicon-plus"></i>My wish list                    
-                </a>
-                
-                <span *ngIf="isInMy('collection', g.gameId)" class="btn" role="button">
-                    My collection                    
-                </span>
-
-                <span *ngIf="isInMy('wishlist', g.gameId)" class="btn btn" role="button">
-                    My wish list                    
-                </span>
+                <a href="#">Share</a>
                 
             </p>
 
