--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -28,8 +28,9 @@
                         Welcome, {{authService.CurrentUser.email}}
                     </a>
                     <div class="dropdown-menu" style="padding:17px;">                        
-                        <a [routerLink]="['MyGames']" style="display:block">My Collections</a>                        
-                        <a style="display:block">Market</a>                        
+                        <a [routerLink]="['MyGames']" style="display:block">My Collections</a>
+                        <a [routerLink]="['Payment']" style="display:block">Payment</a>                       
+                        <a style="display:block">Market</a>
                         <a style="display:block">Tracking</a>                        
                     </div>
                 </li>
