--- a/client/app/home/myGames.component.html
+++ b/client/app/home/myGames.component.html
@@ -5,10 +5,10 @@
         <ul class="list-inline">
             
             <li>
-                <a [class.active]="platformFilter == ''" (click)="updatePlatformFilter('')">My collection</a>
+                <a [class.active]="currentTab == 'collection'" (click)="getMyGames('collection')">My collection</a>
             </li>
             <li>
-                | <a [class.active]="platformFilter == p" (click)="updatePlatformFilter(p)">Wish list</a>
+                | <a [class.active]="currentTab == 'wishlist'" (click)="getMyGames('wishlist')">Wish list</a>
             </li>
         </ul>
     </div>
@@ -20,7 +20,7 @@
         <ul class="list-inline">
             <li><strong>Platform</strong></li>
             <li><a [class.active]="platformFilter == ''" (click)="updatePlatformFilter('')">All</a></li>
-            <li *ngFor="#p of platformList">
+            <li *ngFor="let p of platformList">
                 | <a [class.active]="platformFilter == p" (click)="updatePlatformFilter(p)">{{p}}</a>
             </li>
         </ul>
@@ -42,14 +42,14 @@
 
 <div class="row bottom10">
 
-    <div class="col-sm-6 col-md-4" *ngFor='#g of games | gamePlatformFilter : platformFilter | gameOrderFilter: orderbyFilter'>
+    <div class="col-sm-6 col-md-4" *ngFor='let g of games | gamePlatformFilter : platformFilter | gameOrderFilter: orderbyFilter'>
 
         <div class="thumbnail">
             <img src="{{g.smallImageUrl}}" alt="{{g.gameTitle}" />
         </div>
 
         <div class="caption">
-            <h3>{{g.gameTitle}}</h3>
+            <h3>{{g.gameTitle}} ({{g.platform}})</h3>
             
 
             <p *ngIf= "_authService.AuthorisedUser!=null">
