--- a/client/app/auth/payment.component.html
+++ b/client/app/auth/payment.component.html
@@ -1,126 +1,86 @@
+
 <h3>{{pageTitle}}</h3>
 
-<div class="main">
-    <div class="card-types">
-        <div class="master"></div>
-        <div class="visa"></div>
-    </div>
-    <header>
-        <h1>Make a payment to<br>games online</h1>
-    </header>
 
-    <form accept-charset="UTF-8" action="" class="pay" method="post" novalidate="novalidate">
-        <div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="✓"><input name="authenticity_token" type="hidden" value="S9RzzKLjXaMuGv5yI7ucmd8pMtTPvaPCL6t4HcedaS0="></div>
-        <div class="step active">
-            <section>
-                <fieldset>
-                    <label for="charge_amount">
-Amount to Pay
-<span class="input-right-hint">AUD</span>
-</label>
-                    <input data-validate="amount" id="charge_amount" name="charge[amount]" required="required" type="text">
 
-                </fieldset>
-            </section>
+<div class="container">
 
-            <section>
-                <fieldset>
-                    <label for="charge_description">
-Description
-</label>
-                    <input id="charge_description" name="charge[description]" type="text">
-                </fieldset>
-            </section>
-
-            <section>
-                <div class="card-name">
-                    <label for="charge_card_name">Name on Card</label>
-                    <input autocomplete="cc-name" data-validate="cc-name" id="charge_card_name" name="charge[card][name]" required="required"
-                        size="30" type="text">
-
-                </div>
-                <fieldset class="thirds card">
-                    <div class="field-1 number">
-                        <label for="charge_card_number">Card Number</label>
-                        <input autocapitalize="off" autocomplete="cc-number" data-validate="cc-number" id="charge_card_number" name="charge[card][number]"
-                            pattern="\d*" placeholder="•••• •••• •••• ••••" required="required" size="30" type="text">
-                    </div>
-                    <div class="field-2 expiry">
-                        <label for="charge_card_expiry">Expiry</label>
-                        <input autocomplete="cc-exp" class="field-1" data-validate="cc-exp" id="charge_card_expiry" name="charge[card][expiry]" pattern="\d*"
-                            placeholder="MM/YY" required="required" size="30" type="text">
-                    </div>
-                    <div class="field-3 cvc">
-                        <label for="charge_card_cvc">CVC</label>
-                        <input autocomplete="off" data-validate="cc-cvc" id="charge_card_cvc" name="charge[card][cvc]" pattern="\d*" required="required"
-                            size="30" type="text">
-                    </div>
-                    <div class="error-group">
-                    </div>
-                </fieldset>
-            </section>
-
-            <fieldset>
-                <div class="field-2">
-                    <label for="charge_email">Email</label>
-                    <input autocomplete="email" data-validate="email" id="charge_email" name="charge[email]" required="required" size="30" type="email">
-
-                </div>
-            </fieldset>
-
-            <section class="submit">
-                <button class="next" type="submit">Next →</button>
-            </section>
+<form class="form-horizontal" role="form">
+    <fieldset>
+      <legend>Amount to pay: {{card.payamount}}</legend>
+      <div class="form-group">
+        <label class="col-sm-3 control-label" for="card-holder-name">Name on Card</label>
+        <div class="col-sm-9">
+          <input type="text" class="form-control" name="card-holder-name" 
+            id="card-holder-name" placeholder="Card Holder's Name" [(ngModel)]="card.name">
         </div>
-
-        <div class="step">
-            <section>
-                <fieldset>
-                    <label for="charge_card_address_line1">Address Line 1</label>
-                    <input autocomplete="address-line1" class="field-1" id="charge_card_address_line1" name="charge[card][address_line1]" required="required"
-                        size="30" type="text">
-
-                    <label for="charge_card_address_line2">Address Line 2 (optional)</label>
-                    <input autocomplete="address-line2" class="field-2" id="charge_card_address_line2" name="charge[card][address_line2]" size="30"
-                        type="text">
-
-                </fieldset>
-                <fieldset class="thirds city-state-postcode">
-                    <div class="field-1">
-                        <label for="charge_card_address_city">City</label>
-                        <input autocomplete="city" id="charge_card_address_city" name="charge[card][address_city]" required="required" size="30"
-                            type="text">
-                    </div>
-                    <div class="field-2">
-                        <label for="charge_card_address_state">State</label>
-                        <input autocomplete="state" id="charge_card_address_state" name="charge[card][address_state]" required="required" size="30"
-                            type="text">
-                    </div>
-                    <div class="field-3">
-                        <label for="charge_card_address_postcode">Postcode</label>
-                        <input autocomplete="postal-code" id="charge_card_address_postcode" name="charge[card][address_postcode]" required="required"
-                            size="30" type="text">
-                    </div>
-                    <div class="error-group">
-
-
-
-                    </div>
-                    <label for="charge_card_address_country">Country</label>
-                    <select id="charge_card_address_country" name="charge[card][address_country]">
-                        <option value="AU">Australia</option>
-                        <option value="NZ">New Zealand</option>
-                        <option value="US">United States</option>
-                    </select>
-
-                </fieldset>
-            </section>
-
-            <section class="submit">
-                <button class="btn btn-lg" (click)="paynow()">Pay Now</button>
-            </section>
+      </div>
+      <div class="form-group">
+        <label class="col-sm-3 control-label" for="card-number">Card Number</label>
+        <div class="col-sm-9">
+          <input type="text" class="form-control" name="card-number" id="card-number" 
+            placeholder="Debit/Credit Card Number" [(ngModel)]="card.cardno">
         </div>
-    </form>
+      </div>
+      <div class="form-group">
+        <label class="col-sm-3 control-label" for="expiry-month">Expiration Date</label>
+        <div class="col-sm-9">
+          <div class="row">
+            <div class="col-xs-3">
+              <select class="form-control col-sm-2" name="expiry-month" id="expiry-month" [(ngModel)]="card.expmonth">
+                <option>Month</option>
+                <option value="01">Jan (01)</option>
+                <option value="02">Feb (02)</option>
+                <option value="03">Mar (03)</option>
+                <option value="04">Apr (04)</option>
+                <option value="05">May (05)</option>
+                <option value="06">June (06)</option>
+                <option value="07">July (07)</option>
+                <option value="08">Aug (08)</option>
+                <option value="09">Sep (09)</option>
+                <option value="10">Oct (10)</option>
+                <option value="11">Nov (11)</option>
+                <option value="12">Dec (12)</option>
+              </select>
+            </div>
+            <div class="col-xs-3">
+              <select class="form-control" name="expiry-year" [(ngModel)]="card.expyear">
+                <option value="13">2013</option>
+                <option value="14">2014</option>
+                <option value="15">2015</option>
+                <option value="16">2016</option>
+                <option value="17">2017</option>
+                <option value="18">2018</option>
+                <option value="19">2019</option>
+                <option value="20">2020</option>
+                <option value="21">2021</option>
+                <option value="22">2022</option>
+                <option value="23">2023</option>
+              </select>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-sm-3 control-label" for="cvv">Card CVV</label>
+        <div class="col-sm-3">
+          <input type="text" class="form-control" name="cvv" id="cvv" 
+            placeholder="Security Code" [(ngModel)]="card.cvv">
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-3 col-sm-5">
+          <button type="button" class="btn btn-success" (click)="paynow()">Pay Now</button>
+        </div>
+        <div class="col-sm-4">
+            <button type="button" class="btn btn-success pull-right" (click)="paynow()">
+                Next <i class="glyphicon glyphicon-arrow-right"></i>
+            </button>
+        </div>
+      </div>
+    </fieldset>
+  </form>
+
 
 
 </div>
