--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -20,6 +20,9 @@
                 <li>                    
                     <a [routerLink]="['NewRelease']">New Release</a>                    
                 </li>
+                <li>
+                    <a [routerLink]="['Payment']" style="display:block">Payment</a>
+                </li>
             </ul>
                     
             <ul class="nav navbar-nav navbar-right">
