--- a/client/app/home/myGames.component.html
+++ b/client/app/home/myGames.component.html
@@ -52,7 +52,7 @@
             <h3>{{g.gameTitle}} ({{g.platform}})</h3>
             
 
-            <p *ngIf= "_authService.AuthorisedUser!=null">
+            <p *ngIf= "_authService.CurrentUser!=null">
                 
                 <a href="#">Share</a>
                 
