--- a/client/app/auth/setupPayment.component.html
+++ b/client/app/auth/setupPayment.component.html
@@ -1,4 +1,6 @@
-<div class="container">    
+<div class="container">
+    <h3>{{pageTitle}}</h3>
+        
     <div class="stepwizard col-md-offset-3">
         <div class="stepwizard-row setup-panel">
             <div class="stepwizard-step">
@@ -24,7 +26,7 @@
             </div>
         </div>
     </div>
-    <h3>{{currentPage}}</h3>
+    
     <form role="form" action="" method="post">
         <div class="row setup-content" id="step-1" *ngIf="currentPage == 1">
             <div class="col-xs-6 col-md-offset-3">
