--- a/client/app/auth/setupPayment.component.html
+++ b/client/app/auth/setupPayment.component.html
@@ -214,6 +214,13 @@
                                 </button>
                             </div>
                         </div>
+                        
+                        <div class="form-group">
+                            <div class="col-sm-offset-3 col-sm-9">
+                                {{payment_result}}
+                            </div>
+                        </div>
+                        
                     </fieldset>
                 </form>
             </div>
