--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -76,9 +76,9 @@
             <div class="col-sm-3 col-md-3 pull-right">
                 <form class="navbar-form input-append" role="search">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search" name="q">
+                        <input type="text" class="form-control" placeholder="Search" name="q" [(ngModel)]="q">
                         <div class="input-group-btn">
-                            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                            <button class="btn btn-default" type="button" (click)="search()"><i class="glyphicon glyphicon-search"></i></button>
                         </div>
                     </div>
                 </form>
