--- a/client/app/gameLibrary/searchResults.component.html
+++ b/client/app/gameLibrary/searchResults.component.html
@@ -31,31 +31,33 @@
     <div class="col-sm-6 col-md-4" *ngFor='let g of games | gamePlatformFilter : platformFilter | gameOrderFilter: orderbyFilter'>
 
         <div class="thumbnail">
-            <img src="{{g.smallImageUrl}}" alt="{{g.gameTitle}" width="135" height="160"/>
+            <a [routerLink]="['detail', {id: g.isin}]"><img src=" {{g.smallImageUrl}} " alt="{{g.gameTitle} " width="135 " height="160 " /></a>
         </div>
 
-        <div class="caption">
+        <div class="caption ">
             <h3>{{g.gameTitle}}</h3>
-            
+
             <p>{{g.platform}} - {{g.releaseDate}} - {{g.quantity}} / {{g.wishcount}}</p>
 
-            <p *ngIf= "_authService.CurrentUser!=null">
-                <a *ngIf="!isInMy('collection', g.gameId) && !isInMy('wishlist', g.gameId)" (click)="addToCollection(g)" class="btn btn-primary" role="button">
-                    <i class="glyphicon glyphicon-plus"></i>My collection                    
+            <p *ngIf="_authService.CurrentUser!=null ">
+                <a *ngIf="!isInMy( 'collection', g.gameId) && !isInMy( 'wishlist', g.gameId) " (click)="addToCollection(g)
+                " class="btn btn-primary " role="button ">
+                    <i class="glyphicon glyphicon-plus "></i>My collection
                 </a>
-                
-                <a *ngIf="!isInMy('collection', g.gameId) && !isInMy('wishlist', g.gameId)" (click)="addToWish(g)" class="btn btn-default" role="button">
-                    <i class="glyphicon glyphicon-plus"></i>My wish list                    
+
+                <a *ngIf="!isInMy( 'collection', g.gameId) && !isInMy( 'wishlist', g.gameId) " (click)="addToWish(g)
+                " class="btn btn-default " role="button ">
+                    <i class="glyphicon glyphicon-plus "></i>My wish list
                 </a>
-                
-                <span *ngIf="isInMy('collection', g.gameId)" class="btn" role="button">
+
+                <span *ngIf="isInMy( 'collection', g.gameId) " class="btn " role="button ">
                     My collection                    
                 </span>
 
-                <span *ngIf="isInMy('wishlist', g.gameId)" class="btn btn" role="button">
+                <span *ngIf="isInMy( 'wishlist', g.gameId) " class="btn btn " role="button ">
                     My wish list                    
                 </span>
-                
+
             </p>
 
         </div>
