--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -15,16 +15,16 @@
 
             <ul class="nav navbar-nav">
                 <li>
-                    <a [routerLink]="['Welcome']">Welcome</a> 
+                    <a [routerLink]="['/welcome']">Welcome</a> 
                 </li>
                 <li>                    
-                    <a [routerLink]="['NewRelease']">New Release</a>                    
+                    <a [routerLink]="['/newRelease']">New Release</a>                    
                 </li>
                 <li>
-                    <a [routerLink]="['Payment']" style="display:block">Payment</a>
+                    <a [routerLink]="['/payment']" style="display:block">Payment</a>
                 </li>
                 <li>
-                    <a [routerLink]="['MyGames']" style="display:block">My Collections</a>
+                    <a [routerLink]="['/myGames']" style="display:block">My Collections</a>
                 </li>
             </ul>
                     
