--- a/client/app/app.component.html
+++ b/client/app/app.component.html
@@ -26,8 +26,13 @@
                 <li>
                     <a [routerLink]="['/myGames']" style="display:block">My Collections</a>
                 </li>
+                <li>
+                    <a (click)="showNotification();">show nofication</a>
+                </li>                
             </ul>
-                    
+            
+            <simple-notifications [options]="options"></simple-notifications>
+            
             <ul class="nav navbar-nav navbar-right">
                 <li *ngIf="authService.CurrentUser != null " class="dropdown" id="menuWelcome">
                     <a class="dropdown-toggle" href="#" data-toggle="dropdown" id="navWelcome">
